1. added "Select all triggers/indexes" in popup menu from parent node 2. added "selectAllChildren" method 3. the "setTreePaths" method has been changed (it adds to currentTreePath the value of the first path from the treePaths array)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -756,6 +756,7 @@ BrowserTreePopupMenu.moveToFolder=Move to folder...
 BrowserTreePopupMenu.properties=Connection Properties
 BrowserTreePopupMenu.recycle=Recycle this Connection
 BrowserTreePopupMenu.reload=Reload {0}
+BrowserTreePopupMenu.selectAll=Select all {0}
 BrowserTreePopupMenu.selectAllTriggers=Select all triggers
 BrowserTreePopupMenu.selectAllIndexes=Select all indexes
 BrowserTreePopupMenu.selectStatement=SELECT statement
