Added new class (DefaultProgressDialog) and improved ImportDataFromFilePanel. -- DefaultProgressDialog -- DefaultProgressDialog is a universal class that required for display status of running processes with the possibility to interrupt them ahead of time.
-- ImportDataFromFilePanel --
1. ImportDataFromFilePanel GUI was slightly redesigned.
2. The import process is now reproduced in a separate thread.
3. To display the import process added object of DefaultProgressDialog class

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -992,6 +992,7 @@ DatabaseTableNode.foreign-keys=Foreign Keys
 DatabaseTableNode.indexes=Indices
 DatabaseTableNode.primary-keys=Primary Keys
 DefaultConnectionListener.activeConns=Active Data Sources: {0}
+DefaultProgressDialog.Executing=Executing
 DependenciesPanel.dependedOn=Objects, that {0} depends on
 DependenciesPanel.dependent=Objects,that depend on {0}
 DockedTabPane.menuItem.close=Close
@@ -1184,8 +1185,8 @@ ImportDataFromFilePanel.Title=Import data
 ImportDataFromFilePanel.SelectDelimiter=Select the delimiter
 ImportDataFromFilePanel.SelectFileType=Select the file type
 ImportDataFromFilePanel.SelectTable=Select the table
-ImportDataFromFilePanel.SelectTimeFormat=Select time format
-ImportDataFromFilePanel.SelectDateFormat=Select date format
+ImportDataFromFilePanel.SelectTimeFormat=Select time pattern
+ImportDataFromFilePanel.SelectDateFormat=Select date pattern
 ImportDataFromFilePanel.SelectTimestampDelimiterFormat=Select timestamp delimiter
 ImportDataFromFilePanel.IsFirstColumnNamesText=Source columns names as first row
 ImportDataFromFilePanel.IsEraseDatabaseText=Erase table before import
@@ -1206,6 +1207,7 @@ ImportDataFromFilePanel.LastNumericSelectorsLabel=Last row:
 ImportDataFromFilePanel.ImportFileTypeLabel=File type:
 ImportDataFromFilePanel.CommitSelectorLabel=Commit step:
 ImportDataFromFilePanel.ImportPropertiesLabel=Import properties:
+ImportDataFromFilePanel.ProgressLabel=Import progress:
 ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Preview/ColumnMapping tables:
 ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
 ImportDataFromFilePanel.OpenFileDialogButton=Select
@@ -1226,7 +1228,7 @@ ImportDataFromFilePanel.ReadFileMessage=Read source file firstly
 ImportDataFromFilePanel.SelectTableMessage=Select the target table firstly
 ImportDataFromFilePanel.SelectDelimiterMessage=Select the delimiter firstly
 ImportDataFromFilePanel.NoSourceSelectedMessage=No source column selected in row 
-ImportDataFromFilePanel.FilePreviewText=Source file preview:
+ImportDataFromFilePanel.ExecutingProgressDialog=Importing data
 ImportDelimitedCommand.title=Import Data
 ImportExportPanelFour.createTableStatementsCheck=Include CREATE TABLE statement
 ImportExportPanelFour.headerLabel=Enter any specific options for the generated files.
