--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -992,6 +992,7 @@ DatabaseTableNode.foreign-keys=Внешние ключи
 DatabaseTableNode.indexes=Индексы
 DatabaseTableNode.primary-keys=Первичные ключи
 DefaultConnectionListener.activeConns=Активные подключения: {0}
+DefaultProgressDialog.Executing=Выполнение
 DependenciesPanel.dependedOn=Объекты БД от которых зависит {0}
 DependenciesPanel.dependent=Объекты зависящие от {0}
 DockedTabPane.menuItem.close=Закрыть
@@ -1184,8 +1185,8 @@ ImportDataFromFilePanel.Title=Импорт данных
 ImportDataFromFilePanel.SelectDelimiter=Выберите разделитель
 ImportDataFromFilePanel.SelectFileType=Выберите тип файла
 ImportDataFromFilePanel.SelectTable=Выберите целевую таблицу
-ImportDataFromFilePanel.SelectTimeFormat=Выберете формат времени
-ImportDataFromFilePanel.SelectDateFormat=Выберете формат даты
+ImportDataFromFilePanel.SelectTimeFormat=Выберете паттерн времени
+ImportDataFromFilePanel.SelectDateFormat=Выберете паттерн даты
 ImportDataFromFilePanel.SelectTimestampDelimiterFormat=Выберете разделитель даты/времени
 ImportDataFromFilePanel.IsFirstColumnNamesText=Первая строка заголовки столбцов источника
 ImportDataFromFilePanel.IsEraseDatabaseText=Очистить таблицу перед вставкой
@@ -1206,6 +1207,7 @@ ImportDataFromFilePanel.CommitSelectorLabel=Шаг коммита:
 ImportDataFromFilePanel.ImportFileTypeLabel=Тип файла:
 ImportDataFromFilePanel.PropertiesLabel=Свойства и настройки импорта:
 ImportDataFromFilePanel.ImportPropertiesLabel=Свойства импорта:
+ImportDataFromFilePanel.ProgressLabel=Прогресс импорта:
 ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Таблица предпросмотра данных / Таблица сопоставления:
 ImportDataFromFilePanel.OpenFileDialogText=Выберите Импортируемый Файл
 ImportDataFromFilePanel.OpenFileDialogButton=Выбрать
@@ -1226,7 +1228,7 @@ ImportDataFromFilePanel.ReadFileMessage=Сначала откройте файл
 ImportDataFromFilePanel.SelectTableMessage=Сначала выберите целевую таблицу
 ImportDataFromFilePanel.SelectDelimiterMessage=Сначала выберите разделитель
 ImportDataFromFilePanel.NoSourceSelectedMessage=Не выбран источник данных в строке 
-ImportDataFromFilePanel.FilePreviewText=Предпросмотр импортированного файла:
+ImportDataFromFilePanel.ExecutingProgressDialog=Импортирование данных
 ImportDelimitedCommand.title=Импорт данных
 ImportExportPanelFour.createTableStatementsCheck=Включить CREATE TABLE запрос
 ImportExportPanelFour.headerLabel=Введите любые конкретные параметры для сгенерированных файлов.
