add support for external procedures

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -957,7 +957,10 @@ CreateProcedureFunctionPanel.FUNCTION=Function
 CreateProcedureFunctionPanel.InputParameters=Input Parameters
 CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
+CreateProcedureFunctionPanel.Engine=Engine
+CreateProcedureFunctionPanel.EntryPoint=Entry Point
 CreateProcedureFunctionPanel.Variables=Variables
+CreateProcedureFunctionPanel.useExternal=Use external module
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
 CreateTableFunctionPanel.Constraints=Constraints
