--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -958,6 +958,9 @@ CreateProcedureFunctionPanel.InputParameters=Входные параметры
 CreateProcedureFunctionPanel.OutputParameters=Выходные параметры
 CreateProcedureFunctionPanel.PROCEDURE=процедуры
 CreateProcedureFunctionPanel.Variables=Переменные
+CreateProcedureFunctionPanel.Engine=Имя движка
+CreateProcedureFunctionPanel.EntryPoint=Внешний модуль
+CreateProcedureFunctionPanel.useExternal=Использовать внешний модуль
 CreateTableFunctionPanel.Columns=Столбцы
 CreateTableFunctionPanel.Connection=Подключение:
 CreateTableFunctionPanel.Constraints=Ограничения
