Added EXTERNAL table creating method. Refactored components arranging code in CreateTableFunctionPanel.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -970,6 +970,12 @@ CreateTableFunctionPanel.data-types=data  types
 CreateTableFunctionPanel.error.retrieving=Error retrieving the {0} list for the {1}.\n\nThe system returned:\n{2}
 CreateTableFunctionPanel.error.select-type=Select type for all columns
 CreateTableFunctionPanel.selected-connection=selected connection
+CreateTableFunctionPanel.IsExternalTableText=Create EXTERNAL table
+CreateTableFunctionPanel.BrowseButtonText=Browse
+CreateTableFunctionPanel.ExternalTableDataFileLabel=Data File:
+CreateTableFunctionPanel.OpenFileDialogText=Select Data File
+CreateTableFunctionPanel.OpenFileDialogButton=Select
+CreateTableFunctionPanel.FileDoesNotExistMessage=The selected file does not exist
 CreateTablePanel.Create=Create
 CreateTablePanel.column-names=column names
 CreateTablePanel.error.retrieving=Error retrieving the {0} list for the {1}.\n\nThe system returned:\n{2}
@@ -1219,7 +1225,7 @@ ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Preview/ColumnMapping
 ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
 ImportDataFromFilePanel.OpenFileDialogButton=Select
 ImportDataFromFilePanel.NoDataForImportMessage=No source selected for import
-ImportDataFromFilePanel.FileDoesNotExistMessage=The selected file does not exist:
+ImportDataFromFilePanel.FileDoesNotExistMessage=The selected file does not exist
 ImportDataFromFilePanel.NoFileSelectedMessage=No file selected
 ImportDataFromFilePanel.NoTimeFormatSelectedMessage=No date/time format selected
 ImportDataFromFilePanel.NoFileTypeSelectedMessage=No file type selected
