--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -970,6 +970,12 @@ CreateTableFunctionPanel.data-types=типов данных
 CreateTableFunctionPanel.error.retrieving=Ошибка построения списка {0} для {1}.\n\nСистема вернула:\n{2}
 CreateTableFunctionPanel.error.select-type=Выберите тип данных для всех столбцов
 CreateTableFunctionPanel.selected-connection=выбранного подключения
+CreateTableFunctionPanel.IsExternalTableText=Создать внешнюю таблицу
+CreateTableFunctionPanel.BrowseButtonText=Открыть Файл
+CreateTableFunctionPanel.ExternalTableDataFileLabel=Файл данных:
+CreateTableFunctionPanel.OpenFileDialogText=Выберите Файл Данных
+CreateTableFunctionPanel.OpenFileDialogButton=Выбрать
+CreateTableFunctionPanel.FileDoesNotExistMessage=Выбранный файл не существует
 CreateTablePanel.Create=Создать
 CreateTablePanel.column-names=столбцов
 CreateTablePanel.error.retrieving=Ошибка построения списка {0} для {1}.\n\nСистема вернула:\n{2}
@@ -1219,7 +1225,7 @@ ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Таблица пре
 ImportDataFromFilePanel.OpenFileDialogText=Выберите Импортируемый Файл
 ImportDataFromFilePanel.OpenFileDialogButton=Выбрать
 ImportDataFromFilePanel.NoDataForImportMessage=Не выбраны источники данных для импорта
-ImportDataFromFilePanel.FileDoesNotExistMessage=Выбранный файл не существует:
+ImportDataFromFilePanel.FileDoesNotExistMessage=Выбранный файл не существует
 ImportDataFromFilePanel.NoFileSelectedMessage=Файл не выбран
 ImportDataFromFilePanel.NoTimeFormatSelectedMessage=Формат даты/времени не выбран
 ImportDataFromFilePanel.NoFileTypeSelectedMessage=Тип файла не выбран
