Reworked ADAPTER CheckBox

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -971,6 +971,7 @@ CreateTableFunctionPanel.error.retrieving=Error retrieving the {0} list for the 
 CreateTableFunctionPanel.error.select-type=Select type for all columns
 CreateTableFunctionPanel.selected-connection=selected connection
 CreateTableFunctionPanel.IsExternalTableText=Create EXTERNAL table
+CreateTableFunctionPanel.IsAdapterNeededText=Use ADAPTER 'CSV'
 CreateTableFunctionPanel.BrowseButtonText=Browse
 CreateTableFunctionPanel.ExternalTableDataFileLabel=Data File:
 CreateTableFunctionPanel.OpenFileDialogText=Select Data File
