--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -972,6 +972,7 @@ CreateTableFunctionPanel.error.select-type=Выберите тип данных 
 CreateTableFunctionPanel.selected-connection=выбранного подключения
 CreateTableFunctionPanel.IsExternalTableText=Создать внешнюю таблицу
 CreateTableFunctionPanel.BrowseButtonText=Открыть Файл
+CreateTableFunctionPanel.IsAdapterNeededText=Использовать ADAPTER 'CSV'
 CreateTableFunctionPanel.ExternalTableDataFileLabel=Файл данных:
 CreateTableFunctionPanel.OpenFileDialogText=Выберите Файл Данных
 CreateTableFunctionPanel.OpenFileDialogButton=Выбрать
